<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/helloWorld"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"


        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonOK"
        android:id="@+id/ButtonOk"
        android:layout_alignTop="@+id/helloWorld"
        android:layout_toEndOf="@+id/helloWorld" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"
        android:id="@+id/ButtonCancel"
        android:layout_alignTop="@+id/ButtonOk"
        android:layout_toEndOf="@+id/ButtonOk" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose1"
        android:id="@+id/textViewTV"
        android:layout_below="@+id/helloWorld"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editT1"
        android:hint="@string/choose2"
        android:layout_alignTop="@+id/textViewTV"
        android:layout_toEndOf="@+id/textViewTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTW2"
        android:text="@string/choose3"
        android:layout_below="@+id/textViewTV"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/choose4"
        android:id="@+id/editT2"
        android:layout_alignTop="@+id/textViewTW2"
        android:layout_toEndOf="@+id/textViewTW2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkB"
        android:text="@string/choose5"
        android:layout_below="@+id/textViewTW2"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:paddingBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check1"
        android:text="@string/chinese"
        android:layout_below="@+id/checkB"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:paddingBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check2"
        android:text="@string/english"
        android:layout_below="@+id/check1"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:paddingBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check3"
        android:text="@string/japanese"
        android:layout_below="@+id/check2"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textV3"
        android:text="@string/choose6"
        android:layout_below="@+id/check3"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:paddingBottom="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group"
        android:orientation="horizontal"
        android:layout_below="@+id/textV3">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textV4"
            android:text="@string/male"


            android:padding="10dp"
            android:paddingBottom="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textV5"
            android:text="@string/female"

            android:padding="10dp"
            android:paddingBottom="10dp" />

    </RadioGroup>
</RelativeLayout>
